--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 
     <footer class="footer-background">
         <div class="container">
-            <a class="logo link" href="./index.html"> Web<span class="logo-span-footer">Studio</span></a>
+            <a class="logo link footer-link" href="./index.html"> Web<span class="logo-span-footer">Studio</span></a>
             <p class="footer-text">Increase the flow of customers and sales for your business with digital
                 marketing & growth solutions.</p>
         </div>
