--- a/portfolio.html
+++ b/portfolio.html
@@ -78,7 +78,7 @@
                 <ul class="list project-portfolio-styling">
                     <li class="list-project-item-styling">
 
-                        <a class="link" href="">
+                        <a class="link link-padding" href="">
                             <img src="./images/Portfolio/img1.jpg" alt="diferent banking pages" width="360"
                                 height="300">
                             <div class="projects-link-styling ">
@@ -90,8 +90,8 @@
                     </li>
                     <li class="list-project-item-styling">
 
-                        <a class="link" href=""><img src="./images/Portfolio/img2.jpg" alt="celphone and terminal"
-                                width="360" height="300">
+                        <a class="link link-padding" href=""><img src="./images/Portfolio/img2.jpg"
+                                alt="celphone and terminal" width="360" height="300">
                             <div class="projects-link-styling ">
 
                                 <h2 class="project-names">Cashless Payment</h2>
@@ -102,7 +102,7 @@
                     </li>
                     <li class="list-project-item-styling">
 
-                        <a class="link" href=""><img src="./images/Portfolio/img3.jpg"
+                        <a class="link link-padding" href=""><img src="./images/Portfolio/img3.jpg"
                                 alt="meditation app in laptop and celphone" width="360" height="300">
                             <div class="projects-link-styling ">
                                 <h2 class="project-names">Meditation App</h2>
@@ -112,8 +112,8 @@
 
                     </li>
                     <li class="list-project-item-styling">
-                        <a class="link" href=""><img src="./images/Portfolio/img4.jpg" alt="taxi inside" width="360"
-                                height="300">
+                        <a class="link link-padding" href=""><img src="./images/Portfolio/img4.jpg" alt="taxi inside"
+                                width="360" height="300">
                             <div class="projects-link-styling">
                                 <h2 class="project-names">Taxi Service</h2>
                                 <p class="project-description">Marketing</p>
@@ -123,8 +123,8 @@
                     </li>
                     <li class="list-project-item-styling">
 
-                        <a class="link" href=""><img src="./images/Portfolio/img5.jpg" alt="graphics on celphones"
-                                width="360" height="300">
+                        <a class="link link-padding" href=""><img src="./images/Portfolio/img5.jpg"
+                                alt="graphics on celphones" width="360" height="300">
                             <div class="projects-link-styling">
 
                                 <h2 class="project-names">Screen Illustrations</h2>
@@ -136,7 +136,7 @@
                     </li>
                     <li class="list-project-item-styling">
 
-                        <a class="link" href=""><img src="./images/Portfolio/img6.jpg"
+                        <a class="link link-padding" href=""><img src="./images/Portfolio/img6.jpg"
                                 alt="young & happy woman in orange sweater" width="360" height="300">
                             <div class="projects-link-styling ">
 
@@ -148,7 +148,7 @@
                     </li>
                     <li class="list-project-item-styling">
 
-                        <a class="link" href=""><img src="./images/Portfolio/img7.jpg"
+                        <a class="link link-padding" href=""><img src="./images/Portfolio/img7.jpg"
                                 alt="diferent celphones with instagram Stories" width="360" height="300">
                             <div class="projects-link-styling ">
 
@@ -160,8 +160,8 @@
                     </li>
                     <li class="list-project-item-styling">
 
-                        <a class="link" href=""><img src="./images/Portfolio/img8.jpg" alt="a woman with shopping net"
-                                width="360" height="300">
+                        <a class="link link-padding" href=""><img src="./images/Portfolio/img8.jpg"
+                                alt="a woman with shopping net" width="360" height="300">
 
                             <div class="projects-link-styling">
                                 <h2 class="project-names">Organic Food</h2>
@@ -172,7 +172,7 @@
                     </li>
                     <li class="list-project-item-styling">
 
-                        <a class="link" href=""><img src="./images/Portfolio/img9.jpg"
+                        <a class="link link-padding" href=""><img src="./images/Portfolio/img9.jpg"
                                 alt="a cup of Coffee with foamy milk" width="360" height="300">
                             <div class="projects-link-styling">
 
@@ -191,7 +191,7 @@
 
     <footer class="footer-background">
         <div class="container">
-            <a class="logo link" href="./index.html"> Web<span class="logo-span-footer">Studio</span></a>
+            <a class="logo link footer-link" href="./index.html"> Web<span class="logo-span-footer">Studio</span></a>
             <p class="footer-text">Increase the flow of customers and sales for your business with digital
                 marketing & growth solutions.</p>
         </div>
